--- a/index..html
+++ b/index..html
@@ -34,7 +34,7 @@
           </svg>
         </button>
       </div>
-      <div class="searches"></div>
+      <div class="searches">Previous searches:</div>
       <div class="weather loading">
         <h2 class="city">Weather in Denver</h2>
         <h1 class="temp">51°C</h1>
